--- a/app.json
+++ b/app.json
@@ -60,9 +60,7 @@
       }
   ],
   "buildpacks": [{
-    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-  }, {
-    "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
+    "url": "https://github.com/adielstudent12/bot_script_vps_Adiel
   }, {
     "url": "heroku/python"
   }],
