--- a/app.json
+++ b/app.json
@@ -60,7 +60,7 @@
       }
   ],
   "buildpacks": [{
-    "url": "https://github.com/adielstudent12/bot_script_vps_Adiel
+    "url": "https://github.com/adielstudent12/bot_script_vps_Adiel"
   }, {
     "url": "heroku/python"
   }],
